reworked all that was needed after the databasehandler class had been refactored

--- a/flaskProject/templates/CreateFinding.html
+++ b/flaskProject/templates/CreateFinding.html
@@ -45,6 +45,11 @@
             <br>
             {{ form.associationToFinding(class_="form-control") }}
         </div>
+        <div class="form-group">
+            {{ form.associationTask.label }}
+            <br>
+            {{ form.associationTask(class_="form-control") }}
+        </div>
                 <div class="form-group">
             {{ form.findingEvidence.label }}
             <br>
