--- a/flaskProject/templates/CreateSubTask.html
+++ b/flaskProject/templates/CreateSubTask.html
@@ -25,10 +25,10 @@
             <br>
             {{ form.subTaskAttachment(class_="form-control") }}
         </div>
-                <div class="form-group">
-            {{ form.associationToSubtask.label }}
+        <div class="form-group">
+            {{ form.associationTask.label }}
             <br>
-            {{ form.associationToSubtask(class_="form-control") }}
+            {{ form.associationTask(class_="form-control") }}
         </div>
                 <div class="form-group">
             {{ form.subTaskAnalystAssignment.label }}
