--- a/flaskProject/templates/EditSubTask.html
+++ b/flaskProject/templates/EditSubTask.html
@@ -26,9 +26,9 @@
             {{ form.subTaskAttachment(class_="form-control") }}
         </div>
         <div class="form-group">
-            {{ form.associationToSubtask.label }}
+            {{ form.associationTask.label }}
             <br>
-            {{ form.associationToSubtask(class_="form-control") }}
+            {{ form.associationTask(class_="form-control") }}
         </div>
         <div class="form-group">
             {{ form.subTaskAnalystAssignment.label }}
