--- a/flaskProject/templates/EditTask.html
+++ b/flaskProject/templates/EditTask.html
@@ -36,6 +36,11 @@
             {{ form.associationToTask(class_="form-control") }}
         </div>
         <div class="form-group">
+            {{ form.associationToSystem.label }}
+            <br>
+            {{ form.associationToSystem(class_="form-control") }}
+        </div>
+        <div class="form-group">
             {{ form.taskAnalystAssignment.label }}
             <br>
             {{ form.taskAnalystAssignment(class_="form-control") }}
